# QBackTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/L2DFileDialog/: L2DFileDialog.h
lib/MemoryProfiler/: MemProfiler.h
src/: QLogger.h  QuanLogger.h
src/Display/: ErrorHandler.h  QDisplay.h  QDisplay_FileInput.h  QDisplay_MenuBar.h
src/Handlers/BotEngine/: Bot.cpp  Bot.h  BotEngine.cpp  BotEngine.h  DataMapping.h
src/Handlers/DataEngine/: DataConverter.py  DataEngine.cpp  DataEngine.h  DataEngineEnum.h  DataFormat.csv  OrderBook.cpp  OrderBook.h
